cleaning up some layout issues

--- a/src/components/project/project-header/styles.module.scss
+++ b/src/components/project/project-header/styles.module.scss
@@ -72,6 +72,7 @@
   }
 
   @media (max-width: 768px) {
+    height: 100vh;
     .heroHeader {
       font-size: 2.8rem;
     }
