--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,8 +1,8 @@
-$primary-color: #f1d39f;
-$secondary-color: #a27048;
-$neutral-color: #555;
-$light-color: #eee5d0;
-$dark-color: #372c17;
+// $primary-color: #f1d39f;
+// $secondary-color: #a27048;
+// $neutral-color: #555;
+// $light-color: #eee5d0;
+// $dark-color: #372c17;
 
 // $primary-color: #cbc5b8ff;
 // $secondary-color: #b97e54ff;
@@ -16,11 +16,11 @@ $dark-color: #372c17;
 // $light-color: #e0d9d2ff;
 // $dark-color: #282b22ff;
 
-// $primary-color: #a53860;
-// $secondary-color: #bdbfd2;
-// $neutral-color: #555;
-// $light-color: #e0d9d2ff;
-// $dark-color: #30323a;
+$primary-color: #a53860;
+$secondary-color: #bdbfd2;
+$neutral-color: #555;
+$light-color: #e0d9d2ff;
+$dark-color: #30323a;
 
 $A3: #a53860;
 $BB: #bdbfd2;
