--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -32,9 +32,10 @@ li {
 
 p,
 li,
-a {
+a,
+div {
   font-size: 1.3rem;
-  line-height: 1.6;
+  line-height: 1.7;
   color: $neutral-color;
   font-weight: 300;
 }
